# MeshRenderer

./: .gitmodules  CMakeLists.txt  README.md  build.sh
cuda/: CMakeLists.txt
cuda/src/: camera.cu  camera.cuh  hit.cu  hit.cuh  main.cpp  mesh.cu  mesh.cuh  ray.cu  ray.cuh  renderer.cu  renderer.cuh  utils.cuh
src/: BVH.cpp  BVH.h  BVHNode.cpp  BVHNode.h  Camera.cpp  Camera.cpp~  Camera.h  Hit.cpp  Hit.h  Mesh.cpp  Mesh.h  Ray.cpp  Ray.h  Renderer.cpp  Renderer.h  Triangle.cpp  Triangle.h  main.cpp
test/: test_bvh.cpp  test_bvhnode.cpp  test_triangle.cpp
